@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.268 2010/07/28 04:36:42 sfeam Exp $
+dnl $Id: configure.in,v 1.269 2010/08/06 01:21:04 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -469,9 +469,8 @@ please add path to readline.h to CPPFLAGS in Makefile]))
 please add path to history.h to CPPFLAGS in Makefile]))
 
       if test "$enable_history_file" = yes; then
-        AC_CHECK_HEADERS(readline/tilde.h,
           AC_DEFINE(GNUPLOT_HISTORY,1,
-                    [ Define if you want to use a gnuplot history file. ]))
+                    [ Define if you want to use a gnuplot history file. ])
       fi
 
     fi # ! ac_cv_lib_readline_readline = no
