@@ -1,3 +1,7 @@
+2010-08-09  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* configure.in src/plot.c: More work to enable autoconfigue on OSX.
+
 2010-08-08  Olivier Mehani  <shtrom@users.sourceforge.net>
 
 	* src/util.c docs/gnuplot.doc:  Add ISO-IEC-80000 prefixes
